# EightFold-Hackathon

./: .gitignore  README.md
backend/: .env.example  adjacency.py  bias.py  db.py  main.py  pyproject.toml  scoring.py  seed_demo.py
backend/agent_skills/: agent1_skills.md  agent2_skills.md  agent3_skills.md  agent4_skills.md
backend/crew/: agents.py  crew.py  tasks.py
backend/talent_discovery_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_adjacency.py  test_bias.py  test_integration.py  test_scoring.py
backend/tools/: github_tool.py  resume_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AdjacencyPanel.tsx  BiasCheckBadge.tsx  CandidateCard.tsx  CandidateCardSkeleton.tsx  CandidateRow.tsx  GapCard.tsx  NavBar.tsx  SkillBreakdown.tsx  SkillGraphView.tsx  StreamingIndicator.tsx  Toast.tsx
frontend/src/hooks/: useSSE.ts  useScoreCounter.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CandidatesPage.tsx  HomePage.tsx  ResultsPage.tsx
frontend/src/store/: store.ts
